# mccu_controller_web

./: .gitignore  pyproject.toml  requirements.txt
docs/: NEW_CMDS_MCCU.xlsx
oneoff/: csv_generate_all_data.py  csv_generator.py  data.csv  requirements.txt
slsc/: EthernetComm.py  SLSC_BB_Dummy.py  slsc.py  slsc_4byte.py  slsc_dummy.py  socket_ip.py  temp_data.csv
web_app/controller_app/: admin.py  apps.py  models.py  views.py
web_app/controller_app/migrations/: 0001_initial.py  0002_satellite.py  0003_safemode.py  0004_remove_satellite_longitude_and_more.py
web_app/controller_app/static/css/: main.css
web_app/controller_app/templates/: base.html  blink.html  dashboard.html  diagnostic.html  index.html  monitor.html  profile.html  satellite_list.html  settings.html
web_app/middlewares/: timing_middleware.py
web_app/web_app/: settings.py  urls.py
